[gd_scene load_steps=15 format=3 uid="uid://d1ppiryuhrukx"]

[ext_resource type="Script" uid="uid://br3h00axdx6bq" path="res://script/drones.gd" id="1_1068k"]
[ext_resource type="Texture2D" uid="uid://vyr0ks75oxum" path="res://graphics/characters/drone.png" id="1_ph41h"]
[ext_resource type="Texture2D" uid="uid://bav7n447bnsa5" path="res://graphics/fire/explosion.png" id="3_xfqa8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1068k"]
atlas = ExtResource("1_ph41h")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfqa8"]
atlas = ExtResource("1_ph41h")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpddo"]
atlas = ExtResource("1_ph41h")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7quxu"]
atlas = ExtResource("1_ph41h")
region = Rect2(96, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_o0ncs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1068k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfqa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpddo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7quxu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v56c6"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ph41h"]
radius = 223.50392

[sub_resource type="Animation" id="Animation_kpddo"]
resource_name = "explode"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_7quxu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0ncs"]
_data = {
&"RESET": SubResource("Animation_7quxu"),
&"explode": SubResource("Animation_kpddo")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4whql"]
radius = 20.024984

[node name="Drones" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_1068k")

[node name="Drone" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o0ncs")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_v56c6")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_ph41h")

[node name="ExplosionSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_xfqa8")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o0ncs")
}

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_4whql")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
